@@ -2,6 +2,7 @@
 +Both player and vehicle will now be damaged on fall
 +Damage dealt when running over an entity now escalates with the overall speed of the car
 +Added Cars stopping to a halt in water
++Re-added leaf decaying for leaves at naturally generated trees
 *fixed tour rail config value
 *small fix for dinosaur attack AI
 *temporary fix for growth serum
@@ -10,3 +11,4 @@
 *Decreased the chance of dropping crickets from grass
 *temporary fix for growth serum
 *Fixed an incompatibility with Immersive Engineering W.I.P
+*Fixed that player-placed leaves did decay
